Fix z-index issues

--- a/client/components/keyed-suggestions/style.scss
+++ b/client/components/keyed-suggestions/style.scss
@@ -1,6 +1,5 @@
 .keyed-suggestions {
 	position: absolute;
-	z-index: 9000;
 	top: 37px;
 	left: 0;
 	width: 100%;
